--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ footer{background:#050505;border-top:1px solid #D4AF37;padding:5rem 2rem 2rem;}
           <ul class="feats"><li>Premium leather interior</li><li>Advanced safety systems</li><li>Climate control</li><li>Bluetooth &amp; navigation</li></ul>
           <div style="background:#0a0a0a;border:1px solid #1a1a1a;padding:0.8rem;margin-bottom:1rem;border-radius:3px;">
             <div style="font-size:0.75rem;color:#D4AF37;text-transform:uppercase;letter-spacing:1px;margin-bottom:0.5rem;font-weight:600;">Complimentary Amenities</div>
-            <div style="font-size:0.75rem;color:#888;line-height:1.6;">&#10003; Complimentary champagne &nbsp; &#10003; Bottled water<br>&#10003; Sanitizing wipes &nbsp; &#10003; Phone chargers<br>&#10003; Refreshment towels &nbsp; &#10003; Magazines</div>
+            <div style="font-size:0.75rem;color:#888;line-height:1.6;">&#10003; Bottled water<br>&#10003; Sanitizing wipes &nbsp; &#10003; Phone chargers<br>&#10003; Refreshment towels &nbsp; &#10003; Magazines</div>
           </div><div class="avail">&#10003; Professional Chauffeur Service</div>
           <div class="card-btns">
             <a href="https://wa.me/27692808765?text=Hello,%20I'm%20interested%20in%20the%20C200.%20Please%20send%20pricing." class="btn btn-gold">Book via WhatsApp</a>
